--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,51 @@
+h1 {
+	color: white;
+	background: #2980b9;
+	margin: 0;
+	padding: 10px 20px;
+	text-transform: uppercase;
+	font-weight: normal;
+	font-size: 24px;
+}
+
 #container {
-	border: 2px solid gray;
+	box-shadow: 0 0 3px rgba(0,0,0, 0.1);
 	width: 360px;
-	margin: 0 auto;
+	margin: 100px auto;
+	background: #f7f7f7;
+
+
 }
 
 .completed {
 	color: gray;
 	text-decoration: line-through;
+}
+
+ul {
+	list-style: none;
+	margin: 0;
+	padding: 0;
+}
+
+li {
+	background: #fff;
+	height: 40px;
+	line-height: 40px;
+	color: #666;
+}
+
+li:nth-child(2n) {
+	background: #f7f7f7;
+}
+
+body {
+	font-family: 'Roboto', sans-serif;
+}
+
+input {
+	font-size: 18px;
+	background-color: #f7f7f7;
+	width: 100%;
+	padding: 13px 13px 13px 20px;
 }
