--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,6 +43,13 @@ body {
 	font-family: 'Roboto', sans-serif;
 }
 
+body {
+	background: #2BC0E4;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #EAECC6, #2BC0E4);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #EAECC6, #2BC0E4); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+}
+
 input {
 	font-size: 18px;
 	background-color: #f7f7f7;
@@ -50,4 +57,14 @@ input {
 	padding: 13px 13px 13px 20px;
 	box-sizing: border-box;
 	color: #2980b9;
+}
+
+input:focus {
+	background: #fff;
+	border: 3px solid #2980b9;
+	outline: none;
+}
+
+.fa-plus {
+	float: right;
 }
