--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,6 +39,24 @@ li:nth-child(2n) {
 	background: #f7f7f7;
 }
 
+span {
+	background: #e74c4c;
+	height: 40px;
+	margin-right: 20px;
+	text-align: center;
+	color: white;
+	width: 0;
+	display: inline-block;
+	transition: 0.2s linear;
+	opacity: 0;
+
+}
+
+li:hover span{
+	width: 40px;
+	opacity: 1.0;
+}
+
 body {
 	font-family: 'Roboto', sans-serif;
 }
@@ -57,6 +75,7 @@ input {
 	padding: 13px 13px 13px 20px;
 	box-sizing: border-box;
 	color: #2980b9;
+	border: 3px solid rgba(0,0,0,0);
 }
 
 input:focus {
